# pyoidc

./: .appveyor.yml  .git-blame-ignore-revs  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.rst  appveyor.yml  mypy.ini  path_run.sh  pylama.ini  pyproject.toml  requirements.txt  runOpRp.sh  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
as/: config.py  server.py
doc/: Makefile  conf.py  contents.rst  index.rst  install.rst  make.bat  make.sh  requirements.txt  usage
docker/: docker-compose.yml
oauth2/: oauth2_server.py
oauth_example/: client_db  oa.py  oa_config.py
oc3/: XpressConnect.py  __init__.py  broken_config.py  broken_server.py  claims_provider.py  client_management.py  cp_config.json  create_jwk_from_cert.py  memusage.py  new_cert_jwk.py.old  oc3_config.json  oc3_config.py  oc3_server.py  oc_config.py.example  oc_server.py
oidc_example/: README.md  oc3_server.py
oidc_fed/: eval.py  idfed.xml  modifications  oidc_fed_2.xml  oidcfed.hf.txt  oidcfed.hf.xml  oidcfed.txt  oidcfed.xml  out  pyoidc  pyoidc.pub  sequence.py  sequence_x.py
requirements/: admin.in  admin.txt  base.in  base.txt  docs.in  docs.txt  quality.in  quality.txt  test.in  test.txt
rp/: __init__.py  rp_conf.py  rp_server.py
rp1/: __init__.py  rp_conf.py  rp_server.py
rp2/: conf.py.example  oidc.py  rp_conf.py  rp_server.py
rp3/: conf.py.example  oidc.py  rp.py
script/: client_management.py  jwenc.py  rp.py  webfinger.py
tests/: conftest.py  debug_1.py  debug_2.py  (+95 more)
(+446 files in other folders)
